src/sunnonlinsol/fixedpoint/F90/fsunnonlinsol_fixedpoint_mod.f90

! This file was automatically generated by SWIG (http://www.swig.org).
! Version 4.0.0
!
! Do not make changes to this file unless you know what you are doing--modify
! the SWIG interface file instead.
module fsunnonlinsol_fixedpoint_mod
 use, intrinsic :: ISO_C_BINDING
 use fsunnonlinsol_mod
 use fsundials_types
 implicit none
 private

 ! PUBLIC METHODS AND TYPES
 public :: FSUNNonlinSol_FixedPoint
 public :: FSUNNonlinSol_FixedPointSens
 public :: FSUNNonlinSolGetType_FixedPoint
 public :: FSUNNonlinSolInitialize_FixedPoint
 public :: FSUNNonlinSolSolve_FixedPoint
 public :: FSUNNonlinSolFree_FixedPoint
 public :: FSUNNonlinSolSetSysFn_FixedPoint
 public :: FSUNNonlinSolSetConvTestFn_FixedPoint
 public :: FSUNNonlinSolSetMaxIters_FixedPoint
 public :: FSUNNonlinSolGetNumIters_FixedPoint
 public :: FSUNNonlinSolGetCurIter_FixedPoint
 public :: FSUNNonlinSolGetNumConvFails_FixedPoint
 public :: FSUNNonlinSolGetSysFn_FixedPoint

 ! WRAPPER DECLARATIONS
 interface
function FSUNNonlinSol_FixedPoint(y, m) &
bind(C, name="SUNNonlinSol_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: y
integer(C_INT), value :: m
type(C_PTR) :: fresult
end function

function FSUNNonlinSol_FixedPointSens(count, y, m) &
bind(C, name="SUNNonlinSol_FixedPointSens") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
integer(C_INT), value :: count
type(C_PTR), value :: y
integer(C_INT), value :: m
type(C_PTR) :: fresult
end function

function FSUNNonlinSolGetType_FixedPoint(nls) &
bind(C, name="SUNNonlinSolGetType_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT) :: fresult
end function

function FSUNNonlinSolInitialize_FixedPoint(nls) &
bind(C, name="SUNNonlinSolInitialize_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSolve_FixedPoint(nls, y0, y, w, tol, callsetup, mem) &
bind(C, name="SUNNonlinSolSolve_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_PTR), value :: y0
type(C_PTR), value :: y
type(C_PTR), value :: w
real(C_DOUBLE), value :: tol
logical(C_BOOL), value :: callsetup
type(C_PTR), value :: mem
integer(C_INT) :: fresult
end function

function FSUNNonlinSolFree_FixedPoint(nls) &
bind(C, name="SUNNonlinSolFree_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSetSysFn_FixedPoint(nls, sysfn) &
bind(C, name="SUNNonlinSolSetSysFn_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_FUNPTR), value :: sysfn
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSetConvTestFn_FixedPoint(nls, ctestfn) &
bind(C, name="SUNNonlinSolSetConvTestFn_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_FUNPTR), value :: ctestfn
integer(C_INT) :: fresult
end function

function FSUNNonlinSolSetMaxIters_FixedPoint(nls, maxiters) &
bind(C, name="SUNNonlinSolSetMaxIters_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT), value :: maxiters
integer(C_INT) :: fresult
end function

function FSUNNonlinSolGetNumIters_FixedPoint(nls, niters) &
bind(C, name="SUNNonlinSolGetNumIters_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_LONG) :: niters
integer(C_INT) :: fresult
end function

function FSUNNonlinSolGetCurIter_FixedPoint(nls, iter) &
bind(C, name="SUNNonlinSolGetCurIter_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_INT) :: iter
integer(C_INT) :: fresult
end function

function FSUNNonlinSolGetNumConvFails_FixedPoint(nls, nconvfails) &
bind(C, name="SUNNonlinSolGetNumConvFails_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
integer(C_LONG) :: nconvfails
integer(C_INT) :: fresult
end function

function FSUNNonlinSolGetSysFn_FixedPoint(nls, sysfn) &
bind(C, name="SUNNonlinSolGetSysFn_FixedPoint") &
result(fresult)
use, intrinsic :: ISO_C_BINDING
type(C_PTR), value :: nls
type(C_PTR), value :: sysfn
integer(C_INT) :: fresult
end function

 end interface


end module
